<resources>
    <string name="app_name">InfoManor</string>
    <string name="slogan">A fresh approach to shopping.</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_customer">Customer Services</string>
    <string name="menu_language">Preffered Language</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sign_out">Sign Out</string>
</resources>
