<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.infomanor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.infomanor.ui.gallery.GalleryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.infomanor.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.infomanor.ui.tools.ToolsFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.infomanor.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.infomanor.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.infomanor.ui.notification.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/notification_fragment" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.infomanor.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/nav_customer"
        android:name="com.example.infomanor.ui.customerservices.CustomerServicesFragment"
        android:label="@string/menu_customer"
        tools:layout="@layout/customer_services_fragment" />

</navigation>